# 40k-WTC-Draft-Solver

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  draft.py  drafter_project.sublime-project  drafter_project.sublime-workspace  final.py  gamepermutations.py  games.py  gamestate.py  gamestatedictionaries.py  generator.py  initial.py  main.py  permutations.py  pyproject.toml  pytest.ini  requirements.txt  strategydictionaries.py  teampermutation.py  todo.txt.txt  utilities.py
.github/workflows/: ci.yml  deploy-pages.yml  web-ci.yml
Matches/Germany/: map_importance_matrix.txt  pairing_matrix.txt
Matches/Scotland/: pairing_matrix.txt
Matches/Spain/: map_importance_matrix.txt  pairing_matrix.txt
docs/: design-mockup.html  web-design.md
docs/plans/: 2026-07-15-random-single-rating-handover.md
drafter/: __main__.py  app.py
drafter/common/: draftstage.py  game_state.py  gamestate.py  packing.py  pairing.py  team_permutation.py  teampermutation.py  utilities.py
drafter/data/: initialise_dictionaries.py  initialisedictionaries.py  match_info.py  paths.py  read_write.py  set_enemy_team.py  set_solve_mode.py  setenemyteam.py  settings.py  store.py
drafter/solver/: context.py  draft.py  draft_loop.py  draftloop.py  game_state_dictionaries.py  games.py  (+3 more)
myenv/: pyvenv.cfg
scripts/: brute_force_oracle.py  compute_golden_value.py  export_conformance_fixtures.py  migrate_match_folder.py  smoke_draft.py
web/: README.md  bench.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
(+136 files in other folders)
