[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wtc-draft-solver"
version = "0.1.0"
description = "Game-theoretic solver and draft bot for Warhammer 40,000 WTC pairing drafts"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "colorama==0.4.6",
    "Deprecated==1.2.14",
    "inquirerpy==0.3.4",
    "loguru==0.7.2",
    "numpy==2.0.0",
    "pfzy==0.3.4",
    "prompt_toolkit==3.0.47",
    "scipy==1.14.0",
    "wcwidth==0.2.13",
    "win32-setctime==1.1.0",
    "wrapt==1.16.0",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3"]

[project.scripts]
drafter = "drafter.__main__:main"

[tool.setuptools.packages.find]
include = ["drafter*"]

[tool.setuptools.package-data]
drafter = ["resources/matches/**/*.csv", "resources/matches/**/*.txt"]
